# 23_Talker

./: pyproject.toml  system_prompt.txt
src/: main.py  text2openai.py  text2pyttsx3.py  text2voicepeak.py  text2voiceroid.py  util.py
